; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_url.c_Curl_uc_to_curlcode.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_url.c_Curl_uc_to_curlcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_URL_MALFORMAT = common dso_local global i32 0, align 4
@CURLE_UNSUPPORTED_PROTOCOL = common dso_local global i32 0, align 4
@CURLE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@CURLE_LOGIN_DENIED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_uc_to_curlcode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %5 [
    i32 129, label %7
    i32 130, label %9
    i32 128, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @CURLE_URL_MALFORMAT, align 4
  store i32 %6, i32* %2, align 4
  br label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @CURLE_UNSUPPORTED_PROTOCOL, align 4
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @CURLE_OUT_OF_MEMORY, align 4
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @CURLE_LOGIN_DENIED, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %9, %7, %5
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
